# game_engine_test

./: Cargo.toml
assets/JSON/: audio_controller.json  font_dict.json  image_dict.json
assets/JSON/components/: basic_boolean_component.json  basic_map_component.json  basic_number_component.json  basic_text_component.json  basic_vec_component.json  default_sound_test.json  drawable_test.json  empty_drawable_test.json  mesh_graphic_test.json  text_display_test.json
assets/JSON/entities/: basic_entity.json  test_textbox.json
assets/JSON/scene_stacks/: basic_test_scene_stack.json
assets/JSON/scenes/: basic_test_scene.json
src/: game.rs  globals.rs  input.rs  main.rs
src/components/: animation.rs  basic_boolean_test.rs  basic_map_test.rs  basic_number_test.rs  basic_text_test.rs  basic_vec_test.rs  mesh_graphic.rs  mod.rs  player_control.rs  position.rs  text_display.rs
src/scenes/: basic_test_scene.rs  mod.rs
src/systems/: draw_text_box.rs  mod.rs  print_basic_components.rs
