[package]
name = "test_game"
version = "0.1.0"
authors = ["Tyler Moroso <tlmoroso@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
coffee = "0.4.1"
specs = "0.16.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
thiserror = "1.0.22"

[dependencies.game_engine]
path = "../gameEngine"